tests/errors/DotPrimitiveType.java
class DotPrimitiveType
{
    public static void main(String[] a)
    {
		System.out.println(new Test().exec(182));
    }
}

class Test
{
	public int exec(int x)
	{
		System.out.println(x.test);
		
		return 0;
	}
}